Got the meal saver to work

--- a/Wishlist test/Info.plist
+++ b/Wishlist test/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string></string>
+	<string>Access is required so that you can access photos of your delicious tasty food.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
